Добавляет исправления в разметку

--- a/source/index.html
+++ b/source/index.html
@@ -8,14 +8,14 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-geader__logo" href="#"></a>
+    <a class="main-header__logo" href="#"></a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item site-list--active">
+          <li class="main-nav__item main-nav--active">
             <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
@@ -55,6 +55,8 @@
           </li>
         </ul>
       </div>
+    </section>
+    <section class="advantages-list">
       <div class="advantages__container">
         <h2 class="advantages__container__title">Как это работает</h2>
         <ol class="advantages__enumeration">
@@ -82,8 +84,8 @@
           привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
       </div>
       <div class="example__inner">
-        <span class="example__kilogram">5кг</span>
-        <span class="example__deys">60 дней</span>
+        <span class="example__desc">5кг</span>
+        <span class="example__desc">60 дней</span>
       </div>
       <div class="example__aside">
         <p class="example__text">снижение веса</p>
