Добовляет исправления в form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,85 +30,137 @@
   </header>
   <main class="main-container">
     <section class="product">
-      <div class="product__wrapper">
-        <h2 class="product__title">Каталог продукции</h2>
-        <ul class="product__list">
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy PRO 500&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>500г</span>
-            <span>Курица</span>
-            <span>700 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
+      <h2 class="product__title">Каталог продукции</h2>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy PRO 500&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">500г</span>
           </li>
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy PRO 1000&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>1000г</span>
-            <span>Курица</span>
-            <span>1000 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Курица</span>
           </li>
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy PRO 500&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>500г</span>
-            <span>Рыба</span>
-            <span>700 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
-          </li>
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy PRO 1000&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>1000г</span>
-            <span>Рыба</span>
-            <span>1000 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
-          </li>
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy slim 500&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>500г</span>
-            <span>Гречка</span>
-            <span>700 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
-          </li>
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy slim 1000&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>1000г</span>
-            <span>Гречка</span>
-            <span>1000 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
-          </li>
-          <li class="product__items">
-            <b class="product__subtitle">Cat Energy slim 500&nbsp;г</b>
-            <p>Масса</p>
-            <p>Вкус</p>
-            <p>Цена</p>
-            <span>500г</span>
-            <span>Рис</span>
-            <span>500 Р.</span>
-            <button class="product__butten" type="button">Заказать</button>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">700 Р.</span>
           </li>
         </ul>
-        <div class="product-info">
-          <b class="product__still">Показать еще 100500 товаров</b>
-          <p class="product__more">На&nbsp;самом деле вкусов гораздо больше!</p>
-          <button class="product__butten product__butten--col" type="button">показать все</button>
-        </div>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy PRO 1000&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">1000г</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Курица</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">1000 Р.</span>
+          </li>
+        </ul>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy PRO 500&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">500г</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Рыба</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">700 Р.</span>
+          </li>
+        </ul>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy PRO 1000&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">1000г</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Рыба</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">1000 Р.</span>
+          </li>
+        </ul>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy slim 500&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">500г</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Гречка</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">400 Р.</span>
+          </li>
+        </ul>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy slim 1000&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">1000г</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Гречка</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">700 Р.</span>
+          </li>
+        </ul>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="product-inner">
+        <b class="product__subtitle">Cat Energy slim 500&nbsp;г</b>
+        <ul class="catalog-list">
+          <li class="product-item">
+            <span class="product__category">Масса</span>
+            <span class="product__chapter">500г</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Вкус</span>
+            <span class="product__chapter">Рис</span>
+          </li>
+          <li class="product-item">
+            <span class="product__category">Цена</span>
+            <span class="product__chapter">500 Р.</span>
+          </li>
+        </ul>
+        <button class="product__butten" type="button">Заказать</button>
+      </div>
+      <div class="show-more">
+        <h3 class="show-more__title">Показать еще 100500 товаров</h3>
+        <p class="show-more__text">На&nbsp;самом деле вкусов гораздо больше!</p>
+        <button class="show-more__butten show-more__butten--col" type="button">показать все</button>
       </div>
     </section>
     <section class="additionally">
@@ -119,35 +171,35 @@
             <b class="additionally__subtitle">Сахарозаменитель</b>
             <p class="additionally__item">1 упаковка (100 г)</p>
             <span class="additionally__price">200Р</span>
-            <button class="product__butten" type="button">Заказать</button>
+            <button class="additionally__butten" type="button">Заказать</button>
           </li>
           <li class="additionally__product">
             <b class="additionally__subtitle">питьевая вода</b>
             <p class="additionally__item">5 литров</p>
             <span class="additionally__price">50Р</span>
-            <button class="product__butten" type="button">Заказать</button>
+            <button class="additionally__butten" type="button">Заказать</button>
           </li>
           <li class="additionally__product">
             <b class="additionally__subtitle">молоко</b>
             <p class="additionally__item">1 литр</p>
             <span class="additionally__price">100Р</span>
-            <button class="product__butten" type="button">Заказать</button>
+            <button class="additionally__butten" type="button">Заказать</button>
           </li>
           <li class="additionally__product">
             <b class="additionally__subtitle">витамины</b>
             <p class="additionally__item">1 упаковка (30 г)</p>
             <span class="additionally__price">300Р</span>
-            <button class="product__butten" type="button">Заказать</button>
+            <button class="additionally__butten" type="button">Заказать</button>
           </li>
         </ul>
       </div>
     </section>
     <div class="product-gift">
-      <p class="product__gift__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+      <p class="product__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
     </div>
     <div class="location">
       <b class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</b>
-      <p class="location__desc">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <address class="location__desc">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
     </div>
   </main>
   <footer class="main-footer">
