Добовляет исправления в catalog

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,9 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-geader__logo" href="#"></a>
+    <a class="main-geader__logo" href="#">
+      <img src="#" alt="Логотип.">
+    </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
