--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,19 +11,21 @@
 <body class="page__body">
   <h1 class="visually-hidden">Cat Energy</h1>
   <header class="main-header">
-    <a class="main-header__logo">
-      <img class="main-header__img" width="33" height="37" src="img/logo-mobile.svg" alt="Маскот.">
-    </a>
-    <a class="main__logo">
-      <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
-    </a>
+    <div class="main-header__logo">
+      <a class="main__logo">
+        <img class="main-header__img" width="33" height="37" src="img/logo-mobile.svg" alt="Маскот.">
+      </a>
+      <a class="main__logo">
+        <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
+      </a>
+    </div>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav--active">
+          <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
@@ -36,81 +39,88 @@
     </nav>
   </header>
   <main class="main-container">
-    <section class="nutrition">
-      <div class="nutrition__wrapper">
-        <h2 class="nutrition__title">Функциональное питание для котов</h2>
-        <p class="nutrition__slogan">Занялся собой? Займись котом!</p>
-        <img class="nutrition__img" width="280" height="270" src="img/banner.png" alt="Корм с курицей.">
-        <a class="nutrition__link" href="form.html">подобрать программу</a>
-      </div>
-    </section>
-    <section class="advantages">
-      <div class="advantages__wrapper">
-        <h2 class="visually-hidden">Наши преимущества </h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--lose-weight">
-            <h3 class="advantages__subtitle">похудение</h3>
-            <p class="advantages__description">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить
-              по&nbsp;деревьям? Пора на&nbsp;диету!
-              Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="advantages__link" href="catalog.html">каталог slim</a>
-          </li>
-          <li class="advantages__item advantages__item--weight">
-            <h3 class="advantages__subtitle">Набор массы</h3>
-            <p class="advantages__description">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat
-              Energy Pro поможет вашему коту нарастить необходимые мышцы!.</p>
-            <a class="advantages__link" href="catalog.html">каталог pro</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="program">
-      <div class="program__container">
-        <h2 class="program__title">Как это работает</h2>
-        <ol class="program__enumeration">
-          <li class="program__desc program__desc--useful">
-            <p class="program__text">Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="program__desc program__desc--powder">
-            <p class="program__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком
-              и&nbsp;готово.</p>
-          </li>
-          <li class="program__desc program__desc--food">
-            <p class="program__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
-          </li>
-          <li class="program__desc program__desc--month">
-            <p class="program__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
-          </li>
-        </ol>
-      </div>
-    </section>
+    <div class="main__wrapper">
+      <section class="nutrition">
+        <div class="nutrition__wrapper">
+          <h2 class="nutrition__title">Функциональное питание для котов</h2>
+          <p class="nutrition__slogan">Занялся собой? Займись котом!</p>
+          <img class="nutrition__img" width="280" height="270" src="img/banner.png" alt="Корм с курицей.">
+          <a class="nutrition__link" href="form.html">подобрать программу</a>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="visually-hidden">Наши преимущества </h2>
+          <ul class="advantages__list">
+            <li class="advantages__item advantages__item--lose-weight">
+              <h3 class="advantages__subtitle">похудение</h3>
+              <p class="advantages__description">Ваш кот весит больше собаки и&nbsp;почти утратил способность лазить
+                по&nbsp;деревьям? Пора на&nbsp;диету!
+                Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="advantages__link" href="catalog.html">каталог slim</a>
+            </li>
+            <li class="advantages__item advantages__item--weight">
+              <h3 class="advantages__subtitle">Набор массы</h3>
+              <p class="advantages__description">Заработать авторитет среди дворовых котов и&nbsp;даже собак? Серия Cat
+                Energy Pro поможет вашему коту нарастить необходимые мышцы!.</p>
+              <a class="advantages__link" href="catalog.html">каталог pro</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="program">
+        <div class="program__container">
+          <h2 class="program__title">Как это работает</h2>
+          <ol class="program__enumeration">
+            <li class="program__desc program__desc--useful">
+              <p class="program__text">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="program__desc program__desc--powder">
+              <p class="program__text">Выпускается в&nbsp;виде порошка, который нужно лишь залить кипятком
+                и&nbsp;готово.</p>
+            </li>
+            <li class="program__desc program__desc--food">
+              <p class="program__text">Замените один-два приема обычной еды на&nbsp;наше функциональное питание.</p>
+            </li>
+            <li class="program__desc program__desc--month">
+              <p class="program__text">Уже через месяц наслаждайтесь изменениями к&nbsp;лучшему вашего питомца!</p>
+            </li>
+          </ol>
+        </div>
+      </section>
+    </div>
     <section class="example">
       <div class="example__wrapper">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__text">Борис сбросил 5&nbsp;кг за&nbsp;2&nbsp;месяца, просто заменив свой обычный корм
           на&nbsp;Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он&nbsp;не&nbsp;менял своих
           привычек и&nbsp;по-прежнему спит по&nbsp;16&nbsp;часов в&nbsp;день.</p>
-        <div class="example__inner">
-          <span class="example__info">5кг</span>
-          <span class="example__info">60 дней</span>
+        <div class="example__flex">
+          <div class="example__inner">
+            <span class="example__info">5кг</span>
+            <p class="example__text example__text--mod">снижение веса</p>
+          </div>
+          <div class="example__aside">
+            <span class="example__info">60 дней</span>
+            <p class="example__text example__text--mod">затрачено времени</p>
+          </div>
+          <div class="example__desc">
+            <p class="example__waste">Затраты на питание:</p>
+            <span class="example__waste example__waste--price">15 000 РУБ.</span>
+          </div>
         </div>
-        <div class="example__aside">
-          <p class="example__text">снижение веса</p>
-          <p class="example__text">затрачено времени</p>
-        </div>
-        <b class="example__waste">Затраты на питание:15 000 РУБ. </b>
       </div>
     </section>
     <section class="location">
       <h2 class="visually-hidden">Местоположение</h2>
       <div class="location__inner">
-        <b class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</b>
-        <a class="location__desc" href="#">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.3973863279616!2d30.324935674167147!3d59.93714175906648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649771068060!5m2!1sru!2sru"
-          width="320" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+        <a class="location__link" href="#">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
       </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.3973863279616!2d30.324935674167147!3d59.93714175906648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649771068060!5m2!1sru!2sru"
+        width="320" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer class="main-footer">
