--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,22 +11,24 @@
 <body class="page__body">
   <h1 class="visually-hidden">Cat Energy</h1>
   <header class="main-header">
-    <a class="main-header__logo">
-      <img class="main-header__img" width="33" height="37" src="img/logo-mobile.svg" alt="Маскот.">
-    </a>
-    <a class="main__logo">
-      <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
-    </a>
+    <div class="main-header__logo">
+      <a class="main__logo">
+        <img class="main-header__img" width="33" height="37" src="img/logo-mobile.svg" alt="Маскот.">
+      </a>
+      <a class="main__logo">
+        <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
+      </a>
+    </div>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item site-list">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
-          <li class="main-nav__item main-nav--active">
+          <li class="main-nav__item  main-nav__item--active">
             <a class="main-nav__link">каталог продукции</a>
           </li>
           <li class="main-nav__item">
@@ -36,184 +39,188 @@
     </nav>
   </header>
   <main class="main-container">
-    <section class="product">
-      <div class="product-card">
+    <div class="main__wrapper">
+      <section class="product">
         <h2 class="product__title">Каталог продукции</h2>
-        <b class="product__subtitle">Cat Energy PRO 500&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">500г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Курица</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">700 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="product-card">
-        <b class="product__subtitle">Cat Energy PRO 1000&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">1000г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Курица</span>
-          </li>
-          <li class="product-item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">1000 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="product-card">
-        <b class="product__subtitle">Cat Energy PRO 500&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">500г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Рыба</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">700 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="product-card">
-        <b class="product__subtitle">Cat Energy PRO 1000&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">1000г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Рыба</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">1000 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="product-card">
-        <b class="product__subtitle">Cat Energy slim 500&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">500г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Гречка</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">400 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="product-card">
-        <b class="product__subtitle">Cat Energy slim 1000&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">1000г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Гречка</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">700 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="product-card">
-        <b class="product__subtitle">Cat Energy slim 500&nbsp;г</b>
-        <ul class="product__list">
-          <li class="product__item">
-            <span class="product__info">Масса</span>
-            <span class="product__info">500г</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Вкус</span>
-            <span class="product__info">Рис</span>
-          </li>
-          <li class="product__item">
-            <span class="product__info">Цена</span>
-            <span class="product__info">500 Р.</span>
-          </li>
-        </ul>
-        <button class="product__butten" type="button">Заказать</button>
-      </div>
-      <div class="show-more">
-        <h3 class="show-more__title">Показать еще 100500 товаров</h3>
-        <p class="show-more__text">На&nbsp;самом деле вкусов гораздо больше!</p>
-        <button class="show-more__butten show-more__butten--col" type="button">показать все</button>
-      </div>
-    </section>
-    <section class="additionally">
-      <div class="additionally__wrapper">
+        <div class="product-card">
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy PRO 500&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">500г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Курица</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">700 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy PRO 1000&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">1000г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Курица</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">1000 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy PRO 500&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">500г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Рыба</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">700 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy PRO 1000&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">1000г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Рыба</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">1000 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy slim 500&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">500г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Гречка</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">400 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy slim 1000&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">1000г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Гречка</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">700 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <b class="product-card__subtitle">Cat Energy slim 500&nbsp;г</b>
+            <ul class="product-card__list">
+              <li class="product-card__item">
+                <span class="product-card__info">Масса</span>
+                <span class="product-card__info">500г</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Вкус</span>
+                <span class="product-card__info">Рис</span>
+              </li>
+              <li class="product-card__item">
+                <span class="product-card__info">Цена</span>
+                <span class="product-card__info">500 Р.</span>
+              </li>
+            </ul>
+            <button class="product-card__butten" type="button">Заказать</button>
+          </div>
+          <div class="product-card__wrapper">
+            <h3 class="product-card__title">Показать еще 100500 товаров</h3>
+            <p class="product-card__text">На&nbsp;самом деле вкусов гораздо больше!</p>
+            <button class="product-card__butten product-card__butten--col" type="button">показать все</button>
+          </div>
+        </div>
+      </section>
+      <section class="additionally">
         <h2 class="additionally__title">Дополнительные товары</h2>
-        <ul class="additionally__list">
-          <li class="additionally__product">
-            <b class="additionally__subtitle">Сахарозаменитель</b>
-            <span class="additionally__item">1 упаковка (100 г)</span>
-            <span class="additionally__price">200Р</span>
-            <button class="additionally__butten" type="button">Заказать</button>
-          </li>
-          <li class="additionally__product">
-            <b class="additionally__subtitle">питьевая вода</b>
-            <span class="additionally__info">5 литров</span>
-            <span class="additionally__price">50Р</span>
-            <button class="additionally__butten" type="button">Заказать</button>
-          </li>
-          <li class="additionally__product">
-            <b class="additionally__subtitle">молоко</b>
-            <span class="additionally__item">1 литр</span>
-            <span class="additionally__price">100Р</span>
-            <button class="additionally__butten" type="button">Заказать</button>
-          </li>
-          <li class="additionally__product">
-            <b class="additionally__subtitle">витамины</b>
-            <span class="additionally__item">1 упаковка (30 г)</span>
-            <span class="additionally__price">300Р</span>
-            <button class="additionally__butten" type="button">Заказать</button>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <div class="product-gift">
-      <p class="product__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+        <div class="additionally__wrapper">
+          <ul class="additionally__list">
+            <li class="additionally__product">
+              <b class="additionally__subtitle">Сахарозаменитель</b>
+              <span class="additionally__item">1 упаковка (100 г)</span>
+              <span class="additionally__price">200Р</span>
+              <button class="additionally__butten" type="button">Заказать</button>
+            </li>
+            <li class="additionally__product">
+              <b class="additionally__subtitle">питьевая вода</b>
+              <span class="additionally__item">5 литров</span>
+              <span class="additionally__price">50Р</span>
+              <button class="additionally__butten" type="button">Заказать</button>
+            </li>
+            <li class="additionally__product">
+              <b class="additionally__subtitle">молоко</b>
+              <span class="additionally__item">1 литр</span>
+              <span class="additionally__price">100Р</span>
+              <button class="additionally__butten" type="button">Заказать</button>
+            </li>
+            <li class="additionally__product">
+              <b class="additionally__subtitle">витамины</b>
+              <span class="additionally__item">1 упаковка (30 г)</span>
+              <span class="additionally__price">300Р</span>
+              <button class="additionally__butten" type="button">Заказать</button>
+            </li>
+          </ul>
+          <div class="additionally__gift">
+            <p class="additionally__text">Закажите все и&nbsp;получите чехол для кота в&nbsp;подарок!</p>
+          </div>
+        </div>
+      </section>
     </div>
     <section class="location">
       <h2 class="visually-hidden">Местоположение</h2>
       <div class="location__inner">
-        <b class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</b>
-        <a class="location__desc" href="#">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.3973863279616!2d30.324935674167147!3d59.93714175906648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649771068060!5m2!1sru!2sru"
-          width="320" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p class="location__text">приглашаем к&nbsp;сотрудничеству дилеров!</p>
+        <a class="location__link" href="#">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</a>
       </div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.3973863279616!2d30.324935674167147!3d59.93714175906648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649771068060!5m2!1sru!2sru"
+        width="320" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer class="main-footer">
