Добавляет декоративные элементы главной страницы

--- a/source/form.html
+++ b/source/form.html
@@ -31,8 +31,8 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="catalog.html">каталог продукции</a>
           </li>
-          <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link">подбор программы</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active">подбор программы</a>
           </li>
         </ul>
       </div>
@@ -131,7 +131,7 @@
     </section>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
-        <a class="main__logo">
+        <a class="main__logo-footer">
           <img src="img/logo-cat-energy.svg" width="101" height="18" alt="Логотип.">
         </a>
         <div class="main-footer__social social">
