--- a/source/catalog.html
+++ b/source/catalog.html
@@ -28,8 +28,8 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
-          <li class="main-nav__item  main-nav__item--active">
-            <a class="main-nav__link">каталог продукции</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active">каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">подбор программы</a>
